--- a/css/style.css
+++ b/css/style.css
@@ -32,3 +32,20 @@
 	font-size: 1000%;
 	color: white;
 }
+
+.get-started{
+	width: 20%;
+	margin: 2.5em auto 0 auto;
+	background-color: transparent;
+	color: white;
+	border: 1px solid white;
+	border-radius: 20px;
+	padding: 1em;
+	font-family: "Poppins", sans-serif;
+	font-weight: 400;
+	font-size: 300%;
+	text-align: center;
+}
+.lg-btn{
+	text-decoration: none;
+}
