--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 	width: 100%;
 	text-align: center;
 	text-shadow: 0.6em 0.6em #001a33;
-	margin-top: 4em;
+	margin-top: 6em;
 }
 .main-title{
 	margin: auto;
@@ -48,4 +48,20 @@
 }
 .lg-btn{
 	text-decoration: none;
+	text-shadow: 0.3em 0.3em #001a33;
+}
+
+.menu-icon{
+	float: left;
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 1;
+	margin: 1em 0 0 1em;
+	color: white;
+	font-size: 300%;
+}
+
+@media only screen and (max-width: 1400px){
+	.get-started{ width: 80%; }
 }
