--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 .radial-background{
-	background-color: #0059b3;
+	background-color: #00264d;
 	background-image: radial-gradient(circle at top, #0059b3, #00264d);
 	background-repeat: no-repeat;
 	background-attachment: fixed;	
@@ -58,6 +58,17 @@
 	left: 0;
 	z-index: 1;
 	margin: 1em 0 0 1em;
+	color: white;
+	font-size: 300%;
+}
+
+.github-icon{
+	float: right;
+	position: fixed;
+	top: 0;
+	right: 0;
+	z-index: 1;
+	margin: 1em 1em 0 0;
 	color: white;
 	font-size: 300%;
 }
